# cslol-patcher

./: CMakeLists.txt  LICENSE
.github/workflows/: buildit.yaml
dep/: CMakeLists.txt
ntdllcrt/: CMakeLists.txt  ntdll.def
src/: cslol-api.c  cslol-api.h  cslol-conf.c  cslol-conf.h  cslol-crypto.c  cslol-crypto.h  cslol-db.c  cslol-db.h  cslol-dll.c  cslol-hook-evil.c  cslol-hook-ovfs.c  cslol-hook.c  cslol-hook.h  cslol-inj.c  cslol-log.c  cslol-log.h  cslol-win32.c  cslol-win32.h
workflows/: buildit.yaml
